--- a/macaron-impl/Cargo.toml
+++ b/macaron-impl/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 heck = "0.3.2"
 quote = "1.0.9"
+auto_from = "0.3.0"
 
 [dependencies.proc-macro2]
 version = "1.0.26"
