--- a/macaron-macros/Cargo.toml
+++ b/macaron-macros/Cargo.toml
@@ -1,18 +1,21 @@
 [package]
-name = "macaron-impl"
+name = "macaron-macros"
 version = "0.1.0"
+authors = ["jjl <james.laver@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+proc-macro = true
 
 [dependencies]
+macaron-impl = { path = "../macaron-impl" }
 heck = "0.3.2"
 quote = "1.0.9"
 auto_from = "0.3.0"
 proc-macro2 = "1"
-smallvec = "1.6.1"
 
 [dependencies.syn]
 version = "1.0.69"
 default-features = false
 features = ["clone-impls", "full", "parsing", "printing", "proc-macro"]
+
