--- a/macaron-impl/Cargo.toml
+++ b/macaron-impl/Cargo.toml
@@ -13,6 +13,6 @@ proc-macro2 = "1"
 smallvec = "1.6.1"
 
 [dependencies.syn]
-version = "1.0.69"
+version = "1.0.71"
 default-features = false
-features = ["clone-impls", "full", "parsing", "printing", "proc-macro"]
+features = ["clone-impls", "full", "parsing", "printing"]
